feat: writing readme and swag
